# petrushka87

./: .gitignore  README.md  start-dev.bat
backend/: .env.example  LOCAL_ACCOUNTS.example.txt  alembic.ini  petr_finance_stats.json  pyproject.toml
backend/alembic/: env.py
backend/app/: __init__.py  main.py
backend/folio_one_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/scripts/: _extract_git_db.py  bootstrap_data.py  clean_orphan_files.py  create_user.py  debug_entity.py  delete_petr_workouts.py  deploy_folio_one.py  import_finance_xlsx.py  import_life_notes.py  inspect_finance_db.py  list_articles.py  migrate_transcription_jobs.py  migrate_user_db.py  populate_entries_fts.py  reindex_embeddings.py  reindex_workouts.py  restore_psych_kanban.py  run_daily_digest.bat  run_daily_digest.py  seed_calendar_preview.py  seed_demo.py  seed_finance_demo.py  seed_petr_kanban.py  seed_reference_people.py  test_digest_scheduler.py  test_ollama.py  test_transcription_smoke.py  verify_life_notes_import.py
backend/tests/: auth_helpers.py  conftest.py  test_ai_contract.py  test_ai_digest_tuner.py  test_alembic_migrations.py  test_assistant.py  test_auth_security.py  test_context_orchestrator.py  test_context_retrievers.py  test_demo_seed.py  test_digest.py  test_digest_feedback.py  test_embeddings_provider.py  test_entity_excerpt.py  test_entity_search.py  test_entry_links.py  test_finance_api.py  test_finance_categorize.py  test_finance_dedup.py  test_finance_excel_import.py  test_finance_preview.py  test_mvp_api.py  test_notes_api.py  test_psych_digest.py  test_query_router.py  test_security_headers.py  test_storage.py  test_therapy_psych_analyze.py  test_therapy_retriever.py  test_therapy_worker.py  test_transcription_worker.py  (+5 more)
(+489 files in other folders)
