[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "transcription*"]

[project]
name = "folio-one-backend"
version = "0.1.0"
description = "FastAPI backend for Folio-One"
readme = "../README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.0",
    "bcrypt>=5.0.0",
    "ddgs>=9.0.0",
    "fastapi>=0.115.0",
    "faster-whisper>=1.1.0",
    "httpx>=0.27.0",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.5",
    "openpyxl>=3.1.5",
    "pydantic-settings>=2.7.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.9",
    "rank-bm25>=0.2.2",
    "requests>=2.32.0",
    "sqlalchemy>=2.0.0",
    "uvicorn[standard]>=0.30.0",
    "yt-dlp>=2026.7.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.6.0",
]
s3 = [
    "boto3>=1.34.0",
]
therapy = [
    "whisperx>=3.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
